fix(css): reduce form padding on small viewports

--- a/views/default/post/styles.css
+++ b/views/default/post/styles.css
@@ -16,10 +16,6 @@
 		align-items: stretch;
 	}
 
-	.post-form-main {
-		padding: 1rem;
-	}
-
 	.elgg-form-footer {
 		padding: 0.5rem 0;
 		margin-top: 1rem;
@@ -52,6 +48,12 @@
 
 	.elgg-field-composite .elgg-field {
 		margin-bottom: 0;
+	}
+}
+
+@media $(media-tablet-up) {
+	.post-form .post-form-main {
+		padding: 1rem;
 	}
 }
 
